increase width, fix color, increase spacing

--- a/style.scss
+++ b/style.scss
@@ -14,7 +14,8 @@
 /**************/
 
 html {
-  font-size: 100%;
+  word-spacing: 0.25em;
+ font-size: 100%;
 }
 
 body {
@@ -31,14 +32,14 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 740px;
+  max-width: 900px;
   padding: 0 10px;
   width: 100%;
 }
 
 .container-about {
   margin: 0 auto;
-  max-width: 740px;
+  max-width: 900px;
   padding: 0 10px;
   width: 100%;
   line-height: 1.3;
@@ -316,13 +317,13 @@ nav {
   bottom: 0;
   width: 100%;
   margin-top: 50px;
-  background-color: #75b79e;
+  background-color: #4B88A2;
 }
 
 .wrapper-footer1 {
   width: 100%;
   margin-top: 50px;
-  background-color: #75b79e;
+  background-color: #4B88A2;
 }
 
 footer {
